# GenieUs

./: .claude-config.json  .env.test  .gitignore  CLAUDE.md  CLAUDE.md.backup  Dockerfile.combined  LICENSE  README.md  adk_guide.md  api-endpoints-mapping.json  api-endpoints-mapping.json.backup.20250627_103609  check-api.sh  cloudbuild-env.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  deploy-frontend-staging.sh  deploy.sh  deployment-comparison.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  entrypoint.sh.bak  gcp-cicd-key.json  gcp-secrets.env  package-lock.json  requirements.md  test_direct_image_analysis.py  test_image_upload.py  test_realistic_image_analysis.py  ハッカソン概要.md  新コンセプト.md
backend/: .dockerignore  .env.cloudsql  .env.example  .env.postgresql  .env.production.bak  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  entrypoint.sh  migrate_effort_data.py  migrate_family_data.py  migrate_growth_data.py  migrate_memories_data.py  migrate_schedule_data.py  migrate_schedules_data.py  migrate_sqlite_to_postgresql.py  pyproject.toml  setup_cloud_sql_minimal.sh  show_all_data.py  test_adk_routing.py  test_cloud_sql_connection.py  test_crud_operations.py  test_schedule_sqlite.py
backend/archive/routing_backup_20250627/: enhanced_routing_backup.py  routing_strategy_backup.py
backend/data/: effort_reports.json  frontend_user_family.json  growth_records.json  memories.json  schedules.json  test_user_family.json
backend/data/deleted_json_20250630_011649/: frontend_user_family_backup.json  schedules_backup_20250629_235831.json
backend/docs/: agent-routing-stability-improvements.md  refactoring-plan.md
backend/src/: main.py
backend/src/agents/: ROUTING_MIGRATION_GUIDE.md  adk_routing_coordinator.py  adk_routing_strategy_adapter.py  agent_manager.py  agent_manager_old.py  agent_registry.py  constants.py  enhanced_routing.py  fallback_parallel_agent.py  intent_based_routing_strategy.py  message_processor.py  parallel_agent_coordinator.py  routing_executor.py  routing_strategy.py  routing_test_cases.py  simple_parallel_agent.py
backend/src/agents/config/: __init__.py  agent_config.py  agent_factory.py  presets.py  tool_registry.py
backend/src/agents/individual/: __init__.py  childcare_agent.py  development_agent.py  (+4 more)
backend/src/config/: settings.py
backend/src/di_provider/: composition_root.py  container.py  factory.py
backend/src/domain/: entities.py  repositories.py
backend/src/share/: logger.py
backend/src/tools/: common_response_formatter.py  effort_record_tool.py  file_management_tool.py  growth_record_tool.py  growth_record_tool_adk.py  image_analysis_tool.py  interactive_confirmation_tool.py  meal_management_integration_tool.py  meal_plan_tool.py  meal_plan_tool_adk.py  meal_record_tool.py  record_management_tool.py  routing_tool.py  schedule_tool.py  schedule_tool_adk.py  search_history_tool.py  voice_analysis_tool.py  web_search_tool.py
backend/tests/: test_api.py  test_development_consultation.py.disabled  test_endpoint.py  test_main_integration.py  test_mvp.py  test_routing_problems.py
(+365 files in other folders)
